styles/fonts.css
@font-face {
	font-family: 'Permanent Marker';
	src: url('../fonts/PermanentMarker.ttf') format('truetype');
}

@font-face {
	font-family: 'Merriweather Regular';
	src: url('../fonts/Merriweather-Regular.ttf') format('truetype');
}

.merriweather-regular {
	font-family: 'Merriweather Regular', Arial, Helvetica, sans-serif;
}

.btn-text-big {
	font-size: 2em;
	text-transform: uppercase;
}

.btn-text-small {
	font-size: 1.5em;
}

button,
#main .content,
.title, .sub-title {
	color: white;
}

.title, .sub-title {
	transition: all 0.5s ease-in;
	min-width: 100%;
}

.permanent-marker {
	font-family: 'Permanent Marker', cursive;
}

.title {
	font-size: 5em;
}

.sub-title {
	font-size: 2em;
	min-height: 2em;
}

